<?xml version="1.0" encoding="UTF-8"?>

<resources>
    <string name="app_name">CalculatorKeypad</string>

    <string name="calculator_display">0</string>

    <string name="memory_clear">MC</string>
    <string name="memory_read">MR</string>
    <string name="memory_store">MS</string>
    <string name="memory_plus">M+</string>
    <string name="memory_minus">M-</string>

    <string name="backspace">\u21E4</string>
    <string name="clear_entry">CE</string>
    <string name="clear_all">AC</string>
    <string name="plus_negative">\u00B1</string>
    <string name="square_root">\u221A</string>

    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="divide">/</string>
    <string name="percentage">%</string>

    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="multiply">*</string>
    <string name="reciprocal">1/x</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="minus">-</string>

    <string name="zero">0</string>
    <string name="decimal_point">.</string>
    <string name="plus">+</string>

    <string name="equals">=</string>

</resources>
