<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:columnCount="5"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/txtDisplay"
        android:layout_columnSpan="5"
        android:text="@string/calculator_display"
        android:textSize="32dp"
        android:layout_gravity="right"/>

    <Button
        android:id="@+id/memoryClear"
        android:layout_column="0"
        android:text="@string/memory_clear" />
    <Button
        android:id="@+id/memoryRead"
        android:layout_column="1"
        android:text="@string/memory_read"/>
    <Button
        android:id="@+id/memoryStore"
        android:layout_column="2"
        android:text="@string/memory_store"/>
    <Button
        android:id="@+id/memoryPlus"
        android:layout_column="3"
        android:text="@string/memory_plus"/>
    <Button
        android:id="@+id/memoryMinus"
        android:layout_column="4"
        android:text="@string/memory_minus"/>

    <Button
        android:id="@+id/backspace"
        android:layout_column="0"
        android:text="@string/backspace" />
    <Button
        android:id="@+id/clearEntry"
        android:layout_column="1"
        android:text="@string/clear_entry"/>
    <Button
        android:id="@+id/clear_all"
        android:layout_column="2"
        android:text="@string/clear_all"/>
    <Button
        android:id="@+id/plusNegative"
        android:layout_column="3"
        android:text="@string/plus_negative"/>
    <Button
        android:id="@+id/squareRoot"
        android:layout_column="4"
        android:text="@string/square_root"/>

    <Button
        android:id="@+id/seven"
        android:layout_column="0"
        android:text="@string/seven" />
    <Button
        android:id="@+id/eight"
        android:layout_column="1"
        android:text="@string/eight"/>
    <Button
        android:id="@+id/nine"
        android:layout_column="2"
        android:text="@string/nine"/>
    <Button
        android:id="@+id/divide"
        android:layout_column="3"
        android:text="@string/divide"/>
    <Button
        android:id="@+id/percentage"
        android:layout_column="4"
        android:text="@string/percentage"/>

    <Button
        android:id="@+id/four"
        android:layout_column="0"
        android:text="@string/four" />
    <Button
        android:id="@+id/five"
        android:layout_column="1"
        android:text="@string/five"/>
    <Button
        android:id="@+id/six"
        android:layout_column="2"
        android:text="@string/six"/>
    <Button
        android:id="@+id/multiply"
        android:layout_column="3"
        android:text="@string/multiply"/>
    <Button
        android:id="@+id/reciprocal"
        android:layout_column="4"
        android:text="@string/reciprocal"/>

    <Button
        android:id="@+id/one"
        android:layout_column="0"
        android:text="@string/one" />
    <Button
        android:id="@+id/two"
        android:layout_column="1"
        android:text="@string/two"/>
    <Button
        android:id="@+id/three"
        android:layout_column="2"
        android:text="@string/three"/>
    <Button
        android:id="@+id/minus"
        android:layout_column="3"
        android:text="@string/minus"/>
    <Button
        android:id="@+id/equals"
        android:layout_rowSpan="2"
        android:layout_gravity="fill_vertical"
        android:layout_column="4"
        android:text="@string/equals"/>

    <Button
        android:id="@+id/zero"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:text="@string/zero" />
    <Button
        android:id="@+id/decimalPoint"
        android:layout_column="2"
        android:text="@string/decimal_point"/>
    <Button
        android:id="@+id/plus"
        android:layout_column="3"
        android:text="@string/plus"/>

    <Space
        android:layout_column="0"
        android:layout_columnSpan="5"
        android:layout_gravity="fill"/>

</GridLayout>